--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,8 @@
 	
 	"require": {
 		"php": ">=5.4.0",
-		
 		"yiisoft/yii2": "2.0.*",
-	  	"yiisoft/yii2-bootstrap": "*",
-		"yiisoft/yii2-codeception": "~2.0.0"
+	  	"yiisoft/yii2-bootstrap": "*"
 	},
 	
 	"autoload": {
