--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
 	"require": {
 		"php": ">=5.4.0",
 		"yiisoft/yii2": "2.0.*",
-	  	"yiisoft/yii2-bootstrap": "*"
+	  	"yiisoft/yii2-bootstrap": "*",
+		"erusev/parsedown": "1.7.*"
 	},
 	
 	"autoload": {
